exregCreate: fixed growth behaviour of semester container and module container
before:
When dragging modules into semesters, the module container would shrink to fit the remaining modules in it.
The semester container took up minimal space and grew only to fit its content.

now:
The modules container fills all available vertical space and does not shrink. If its contents don't fit, scrollbars appear.
The semester container fills all available vertical space. If the content takes up more space, scrollbars appear.

--- a/src/main/resources/static/css/exregCreate.css
+++ b/src/main/resources/static/css/exregCreate.css
@@ -9,3 +9,12 @@
 .placeholderText {
     border: none;
 }
+
+#semesterContainer, #unmappedModulesList {
+    overflow: auto;
+    flex-basis: 0 !important;
+}
+
+#mapModulesTab.active {
+    display: flex;
+}
